# agent-server

./: README.md  docker-compose.yml
app/: config.py  dev.ipynb  main.py  pyproject.toml
app/package/: utils.py
app/package/agents/: base.py  examples.py  extractor.py  registry.py  token_cost.yml
app/package/data_models/: intent_classification.py  plotly_data_generator.py
app/package/embedding/: transformer_embedding.py
app/package/factory/: agent.py  intent.py  llm.py  setup_factory.py
app/package/intent_hub/: __init__.py  next_action.json  query.json
app/package/intents/: base.py  utils.py
app/package/llms/: base.py  models.py  registry.py  utils.py
app/package/prompt_hub/: __init__.py  bro-andy.md  chat.md  chat_with_data.md  generate_plotly.md  generate_plotly_data.md  generate_sql.md  intent_classifier.md
app/package/routers/: agent.py  agents.py  intent.py  llm.py  llms.py
app/test/: index.html  plotly_data.json
