[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.121.3",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.4",
  "boto3>=1.41.1",
  "python-toon>=0.1.3",
  'PyYAML==6.0.2',
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]